--- a/Numpy wiki/NumPy.ipynb
+++ b/Numpy wiki/NumPy.ipynb
@@ -1,32 +1,8 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "orig_nbformat": 4,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
-  },
-  "interpreter": {
-   "hash": "770021e68aae5e5bc49f7a3b6edb919a4a251fef8e7696fd47196c25263b13c4"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,32 +61,128 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# فهمیدن مشخصات مربوط به یک آرایه\n",
-    "# find imformation about array\n",
-    "\n",
-    "x = np.random.randint(10, size= (3,4,4) )\n",
-    "\n",
-    "\n",
-    "# بعد\n",
-    "# dimension\n",
-    "print(x.ndim)\n",
-    "\n",
-    "\n",
-    "# چند در چند بودن\n",
-    "#shape\n",
-    "print(x.shape)\n",
-    "\n",
-    "\n",
-    "# تعداد کل مقدادیر که حاصل ضرب ابعاد در هم است\n",
-    "# number of all values equal to multiply of dimensions\n",
-    "# 3 * 4 * 4 = 48\n",
-    "print(x.size)\n",
-    "\n",
-    "\n",
-    "#جحم\n",
-    "#size\n",
-    "print(x.itemsize, \"Bytes\")\n",
+    "# فهمیدن مشخصات مربوط به یک آرایه\r\n",
+    "# find imformation about array\r\n",
+    "\r\n",
+    "x = np.random.randint(10, size= (3,4,4) )\r\n",
+    "\r\n",
+    "\r\n",
+    "# بعد\r\n",
+    "# dimension\r\n",
+    "print(x.ndim)\r\n",
+    "\r\n",
+    "\r\n",
+    "# چند در چند بودن\r\n",
+    "#shape\r\n",
+    "print(x.shape)\r\n",
+    "\r\n",
+    "\r\n",
+    "# تعداد کل مقدادیر که حاصل ضرب ابعاد در هم است\r\n",
+    "# number of all values equal to multiply of dimensions\r\n",
+    "# 3 * 4 * 4 = 48\r\n",
+    "print(x.size)\r\n",
+    "\r\n",
+    "\r\n",
+    "# پیدا کردن دیتا تایپ\r\n",
+    "# find data type\r\n",
+    "print(x.dtype)\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "#جحم\r\n",
+    "#size\r\n",
+    "print(x.itemsize, \"Bytes\")\r\n",
     "print(x.nbytes, \"Bytes\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Data types***\r\n",
+    "\r\n",
+    "<pre>\r\n",
+    "    i - integer\r\n",
+    "    b - boolean\r\n",
+    "    u - unsigned integer\r\n",
+    "    f - float\r\n",
+    "    c - complex float\r\n",
+    "    m - timedelta\r\n",
+    "    M - datetime\r\n",
+    "    O - object\r\n",
+    "    S - string\r\n",
+    "    U - unicode string\r\n",
+    "    V - fixed chunk of memory for other type ( void )\r\n",
+    "\r\n",
+    "\r\n",
+    "'hello'  ->   U5\r\n",
+    "'hello world'  ->   U11  \r\n",
+    "array(['hello world', 'hello']).dtype   ->  U11\r\n",
+    "\r\n",
+    "i4  ->  intiger 4 byte\r\n",
+    "U11 ->  unicode string 11 Byte\r\n",
+    "\r\n",
+    "i8 -> int64  -> 8 Byte  -> max 16 number\r\n",
+    "i4 -> int32  -> 4 Byte  -> max 10 number\r\n",
+    "i2 -> int16  -> 2 Byte  -> max 5 number\r\n",
+    "i1 -> int8   -> 1 Byte  -> max 3 number \r\n",
+    "                           for more number we must convert to O(object)\r\n",
+    "\r\n",
+    "\r\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.1 2.1 3.1]\n",
+      "float64\n",
+      "[1 2 3]\n",
+      "int32\n",
+      "[ True False  True  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# دیتا تایپ ها یا انواع داده\r\n",
+    "# data type\r\n",
+    "\r\n",
+    "# dtype in array if not give : minimum type required to hold the objects in the sequence.\r\n",
+    "# را اگر به آرایه ندهیم، به صورت خودکار بهترین حالت رو انتخاب میکنه dtype\r\n",
+    "\r\n",
+    "x = np.array([1.1, 2.1, 3.1])\r\n",
+    "\r\n",
+    "print(x)\r\n",
+    "\r\n",
+    "#see data type / دیدن نوع داده ای\r\n",
+    "print(x.dtype)\r\n",
+    "\r\n",
+    "#change data type / تغییر نوع داده\r\n",
+    "x = x.astype('i')\r\n",
+    "x = x.astype(int)\r\n",
+    "print(x)\r\n",
+    "print(x.dtype)\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "#change int type to bool / تبدیل تایپ عددی به بولین\r\n",
+    "# ==0 -> False   =!0 -> True\r\n",
+    "x = np.array([1, 0, -4, 10], dtype=bool)\r\n",
+    "print(x)\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "## x = np.array(['a', '2', '3'], dtype='i')  # --> error  (can't convert string to int)\r\n",
+    "\r\n"
    ]
   },
   {
@@ -119,10 +191,22 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "7\n8\n[[[  5   0   3]\n  [100 100 100]\n  [  3   5   2]]\n\n [[  4   7   6]\n  [  8   8   1]\n  [  6   7   7]]\n\n [[  8   1   5]\n  [  9   8   9]\n  [  4   3   0]]]\n"
+      "7\n",
+      "8\n",
+      "[[[  5   0   3]\n",
+      "  [100 100 100]\n",
+      "  [  3   5   2]]\n",
+      "\n",
+      " [[  4   7   6]\n",
+      "  [  8   8   1]\n",
+      "  [  6   7   7]]\n",
+      "\n",
+      " [[  8   1   5]\n",
+      "  [  9   8   9]\n",
+      "  [  4   3   0]]]\n"
      ]
     }
    ],
@@ -148,6 +232,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "*نکته*\n",
     "<br>\n",
@@ -158,9 +244,7 @@
     "*point*\n",
     "<br>\n",
     "If our array is type is like \"int32\", if we set a value to a float number, The array cannot accept a float number, so only the integer is taken"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -204,10 +288,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[3 3 3 3]\n[1 1 2 2 3 3 4 4]\n[[1 1 1 2 2 2]\n [3 3 3 4 4 4]]\n[[1 2]\n [3 4]\n [3 4]]\n"
+      "[3 3 3 3]\n",
+      "[1 1 2 2 3 3 4 4]\n",
+      "[[1 1 1 2 2 2]\n",
+      " [3 3 3 4 4 4]]\n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [3 4]]\n"
      ]
     }
    ],
@@ -428,10 +518,15 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[[0.50831545 0.16684751 0.77905102 0.8649333 ]\n [0.41139672 0.13997259 0.03322239 0.98257496]\n [0.37329075 0.42007537 0.05058812 0.36549611]]\n[[ 9 10 27 45]\n [71 39 61 85]\n [97 44 34 34]]\n"
+      "[[0.50831545 0.16684751 0.77905102 0.8649333 ]\n",
+      " [0.41139672 0.13997259 0.03322239 0.98257496]\n",
+      " [0.37329075 0.42007537 0.05058812 0.36549611]]\n",
+      "[[ 9 10 27 45]\n",
+      " [71 39 61 85]\n",
+      " [97 44 34 34]]\n"
      ]
     }
    ],
@@ -454,10 +549,18 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[[44 47 64 67]\n [67  9 83 21]\n [36 87 70 88]]\n9\n[44  9 36]\n[36  9 64 21]\n5\n[0 1 0]\n[2 1 0 1]\n"
+      "[[44 47 64 67]\n",
+      " [67  9 83 21]\n",
+      " [36 87 70 88]]\n",
+      "9\n",
+      "[44  9 36]\n",
+      "[36  9 64 21]\n",
+      "5\n",
+      "[0 1 0]\n",
+      "[2 1 0 1]\n"
      ]
     }
    ],
@@ -500,10 +603,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "0\n1\n2\n3\n4\n10\n[[[[[[[[[[1 2 3]]]]]]]]]]\n"
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "10\n",
+      "[[[[[[[[[[1 2 3]]]]]]]]]]\n"
      ]
     }
    ],
@@ -538,8 +647,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "5th element on 2nd dim:  10\n"
      ]
@@ -554,5 +663,21 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "770021e68aae5e5bc49f7a3b6edb919a4a251fef8e7696fd47196c25263b13c4"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": ""
+  },
+  "orig_nbformat": 4
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
