--- a/Pandas wiki/Pandas.ipynb
+++ b/Pandas wiki/Pandas.ipynb
@@ -322,7 +322,8 @@
     }
    ],
    "source": [
-    "# Dtyoes\r\n",
+    "# انواع داده در دیتا فریم\r\n",
+    "# Data types in Data Frame\r\n",
     "\r\n",
     "\r\n",
     "d = {'col1': [1.2, 2], 'col2': [3, 4]}\r\n",
@@ -336,7 +337,12 @@
     "\r\n",
     "df = pd.DataFrame(data=d, dtype=np.int8)\r\n",
     "print(f' dtypes :\\n{df.dtypes}')\r\n",
-    "print(df)"
+    "print(df)\r\n",
+    "\r\n",
+    "\r\n",
+    "# The Data Types is explained in the Numpy wiki file\r\n",
+    "# توضیح داده شده Numpy wiki دیتا تایپ ها در فایل\r\n",
+    "# https://github.com/mahdi-ebrahimi-per/python-mini-projects/tree/main/Numpy%20wiki\r\n"
    ]
   },
   {
