--- a/Numpy wiki/NumPy.ipynb
+++ b/Numpy wiki/NumPy.ipynb
@@ -211,24 +211,24 @@
     }
    ],
    "source": [
-    "# دسترسی به جایگاه\n",
-    "# Access to the position\n",
-    "\n",
-    "np.random.seed(0)\n",
-    "\n",
-    "x = np.random.randint(10, size=(3,3,3))\n",
-    "\n",
-    "#fist array from 3 array - secend row - secend column \n",
-    "#اولین آرایه - سطر دوم - ستون دوم\n",
-    "print(x[0,1,1])  # [0,1,1] = [0][1][1]\n",
-    "\n",
-    "#change vlaue \n",
-    "# تغییر مقدار\n",
-    "x[0,1,1] = 8\n",
-    "\n",
-    "# change all secend raw value of first array\n",
-    "# تغییر کل مقادیر سطر دوم از آرایه اول\n",
-    "x[0,1,:] = 100\n"
+    "# دسترسی به جایگاه\r\n",
+    "# Access to the position\r\n",
+    "\r\n",
+    "np.random.seed(0)\r\n",
+    "\r\n",
+    "x = np.random.randint(10, size=(3,3,3))\r\n",
+    "\r\n",
+    "#fist array from 3 array - secend row - secend column \r\n",
+    "#اولین آرایه - سطر دوم - ستون دوم\r\n",
+    "print(x[0,1,1])  # [0,1,1] = [0][1][1]\r\n",
+    "\r\n",
+    "#change vlaue \r\n",
+    "# تغییر مقدار\r\n",
+    "x[0,1,1] = 8\r\n",
+    "\r\n",
+    "# change all secend row value of first array\r\n",
+    "# تغییر کل مقادیر سطر دوم از آرایه اول\r\n",
+    "x[0,1,:] = 100\r\n"
    ]
   },
   {
@@ -252,34 +252,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# برش دادن\n",
-    "# slicing\n",
-    "\n",
-    "np.random.seed(0)\n",
-    "\n",
-    "x = np.random.randint(25, size=(8,4))\n",
-    "\n",
-    "# select first raw\n",
-    "print(x[0])  # [0, :]\n",
-    "\n",
-    "# select first column\n",
-    "print(x[:,0])\n",
-    "\n",
-    "\n",
-    "# [:10]  -> index 0, 1,...,9  (10 -1)\n",
-    "\n",
-    "# 2 ray and 2 column / دو سطر و سه ستون\n",
-    "print(x[:2, :3])\n",
-    "\n",
-    "# سه سطر و سه ستون با فاصله یکی در میان\n",
-    "# 3raw & 3column & decussate\n",
-    "print(x[:3, :3:2])\n",
-    "\n",
-    "# برعکس کردن همه ی آرایه\n",
-    "# reverse all array\n",
-    "print(x[::-1, ::-1])\n",
-    "\n",
-    "\n"
+    "# برش دادن\r\n",
+    "# slicing\r\n",
+    "\r\n",
+    "np.random.seed(0)\r\n",
+    "\r\n",
+    "x = np.random.randint(25, size=(8,4))\r\n",
+    "\r\n",
+    "# select first row\r\n",
+    "print(x[0])  # [0, :]\r\n",
+    "\r\n",
+    "# select first column\r\n",
+    "print(x[:,0])\r\n",
+    "\r\n",
+    "\r\n",
+    "# [:10]  -> index 0, 1,...,9  (10 -1)\r\n",
+    "\r\n",
+    "# 2 ray and 2 column / دو سطر و سه ستون\r\n",
+    "print(x[:2, :3])\r\n",
+    "\r\n",
+    "# سه سطر و سه ستون با فاصله یکی در میان\r\n",
+    "# 3row & 3column & decussate\r\n",
+    "print(x[:3, :3:2])\r\n",
+    "\r\n",
+    "# برعکس کردن همه ی آرایه\r\n",
+    "# reverse all array\r\n",
+    "print(x[::-1, ::-1])\r\n",
+    "\r\n",
+    "\r\n"
    ]
   },
   {
@@ -565,36 +565,36 @@
     }
    ],
    "source": [
-    "# بدست آوردن کوچک ترین یا بزرگ ترین مقدار\n",
-    "# find min or max value\n",
-    "\n",
-    "np.random.seed(0)\n",
-    "\n",
-    "x = np.random.randint(100 , size=(3, 4))\n",
-    "print(x)\n",
-    "\n",
-    "# minimux in all of the array / کوچک ترین آیتم در کل آرایه\n",
-    "print(x.min())\n",
-    "\n",
-    "# minimum in the each raw  / کوچک ترین در هر سطر\n",
-    "print(x.min(axis=1))     \n",
-    "\n",
-    "#minimum in the each column / کوچک ترین در هر ستون\n",
-    "print(x.min(axis=0))\n",
-    "\n",
-    "\n",
-    "\n",
-    "# index of the minimum in all / ایندکس کوچک ترین در کل آرایه\n",
-    "print(np.argmin(x))\n",
-    "\n",
-    "# index of the minimum in each raw / ایندکس کوچک ترین در هر سطر\n",
-    "print(np.argmin(x, axis=1))\n",
-    "\n",
-    "# index of the minimum in each column / ایندکس کوچک ترین در هر ستون\n",
-    "print(np.argmin(x, axis=0))\n",
-    "\n",
-    "\n",
-    "\n"
+    "# بدست آوردن کوچک ترین یا بزرگ ترین مقدار\r\n",
+    "# find min or max value\r\n",
+    "\r\n",
+    "np.random.seed(0)\r\n",
+    "\r\n",
+    "x = np.random.randint(100 , size=(3, 4))\r\n",
+    "print(x)\r\n",
+    "\r\n",
+    "# minimux in all of the array / کوچک ترین آیتم در کل آرایه\r\n",
+    "print(x.min())\r\n",
+    "\r\n",
+    "# minimum in the each row  / کوچک ترین در هر سطر\r\n",
+    "print(x.min(axis=1))     \r\n",
+    "\r\n",
+    "#minimum in the each column / کوچک ترین در هر ستون\r\n",
+    "print(x.min(axis=0))\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "# index of the minimum in all / ایندکس کوچک ترین در کل آرایه\r\n",
+    "print(np.argmin(x))\r\n",
+    "\r\n",
+    "# index of the minimum in each row / ایندکس کوچک ترین در هر سطر\r\n",
+    "print(np.argmin(x, axis=1))\r\n",
+    "\r\n",
+    "# index of the minimum in each column / ایندکس کوچک ترین در هر ستون\r\n",
+    "print(np.argmin(x, axis=0))\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n"
    ]
   },
   {
