--- a/Pandas wiki/Pandas.ipynb
+++ b/Pandas wiki/Pandas.ipynb
@@ -347,6 +347,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   first  secend\n",
+      "a      1       4\n",
+      "b      2       5\n",
+      "c      3       6\n",
+      "   first  secend\n",
+      "a      1       4\n",
+      "b      2       5\n",
+      "   first\n",
+      "a      1\n",
+      "b      2\n",
+      "   first\n",
+      "a      1\n",
+      "b      2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# انتخاب بندی یا برش دادن\r\n",
+    "# slicing\r\n",
+    "\r\n",
+    "\r\n",
+    "data = pd.DataFrame( {'first' : [1,2,3], 'secend':[4,5,6]},columns=[\"first\",\"secend\"]\r\n",
+    "        ,index=[\"a\",\"b\",\"c\"])#.T\r\n",
+    "\r\n",
+    "print(data)\r\n",
+    "\r\n",
+    "\r\n",
+    "# Show up to row 2 (the columns do not make a difference)\r\n",
+    "# تا سطر دوم رو نشون بده (ستون ها تفاوتی نمیکنند)\r\n",
+    "print(data[:2])\r\n",
+    "## print(data[:2, :1])   # --> error  (can't use [:x,:y], must use [:x]  and x is row, just slice just row)\r\n",
+    "\r\n",
+    "\r\n",
+    "# slice row and column / انخاب هم سطر هم ستون\r\n",
+    "# slice 2 row and first column / انتخاب 2 سطر و یک ستون\r\n",
+    "print(data.iloc[:2, :1])\r\n",
+    "\r\n",
+    "\r\n",
+    "# slice with value / انتخاب با کمک مقادیر\r\n",
+    "print(data.loc[:'b', :'first'])\r\n",
+    "\r\n",
+    "\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
