--- a/os wiki/os wiki.ipynb
+++ b/os wiki/os wiki.ipynb
@@ -10,6 +10,39 @@
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# change directory / تغییر دایرکتوری\r\n",
+    "\r\n",
+    "print(os.getcwd())\r\n",
+    "\r\n",
+    "os.chdir('..')   #or any address (../.. two previous dir)\r\n",
+    "\r\n",
+    "print(os.getcwd())\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# directory list of current dir / لیست دایرکتوری های درون دایرکتوری کنونی\r\n",
+    "\r\n",
+    "print(os.listdir())\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
