--- a/os wiki/os wiki.ipynb
+++ b/os wiki/os wiki.ipynb
@@ -40,6 +40,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "source": [
+    "# make directory / ایجاد دایرکتوری\r\n",
+    "\r\n",
+    "#without sub dir / نمیتوان دایرکتوری زیر شاخه ایجاد کرد\r\n",
+    "os.mkdir('test1')\r\n",
+    "# ('test1/sub-dir1') # --> error\r\n",
+    "\r\n",
+    "# with dub dir / میتوان دایرکتوری زیرشاخه نیز ایجاد کرد\r\n",
+    "os.makedirs('test2')\r\n",
+    "os.makedirs('test2/sub-dir1/sub-sub-dir1')\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "source": [],
    "outputs": [],
    "metadata": {}
