--- a/os wiki/os wiki.ipynb
+++ b/os wiki/os wiki.ipynb
@@ -57,6 +57,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "source": [
+    "# remove directory / حذف دایرکتوری\r\n",
+    "\r\n",
+    "#make test / ایجاد تست 1\r\n",
+    "os.mkdir('test1/sub-dir1')\r\n",
+    "\r\n",
+    "\r\n",
+    "#remove test 1 / حذف تست 1\r\n",
+    "os.rmdir('test1')\r\n",
+    "# ('test1/subdir1') # --> error\r\n",
+    "\r\n",
+    "os.removedirs('test1/sub-dir1')\r\n",
+    "\r\n",
+    "\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# rename / تغییر نام\r\n",
+    "\r\n",
+    "#meke txt file\r\n",
+    "f = open(\"test.txt\", 'w')\r\n",
+    "f.close()\r\n",
+    "\r\n",
+    "#raname\r\n",
+    "os.rename('test.txt', 'demo.txt')\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "source": [],
    "outputs": [],
    "metadata": {}
