--- a/os wiki/os wiki.ipynb
+++ b/os wiki/os wiki.ipynb
@@ -94,6 +94,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "source": [
+    "# status of file / مشخصات فایل\r\n",
+    "\r\n",
+    "#meke txt file\r\n",
+    "f = open(\"demo.txt\", 'w')\r\n",
+    "f.close()\r\n",
+    "\r\n",
+    "\r\n",
+    "# all status (find in documentation about what are thease)\r\n",
+    "# تمام اطلاعات (در داکیومنتیشن پیداکنید اینا چی هستند)\r\n",
+    "print(os.stat('demo.txt'))\r\n",
+    "\r\n",
+    "#size (byte) / سایز به بایت\r\n",
+    "print(os.stat('demo.txt').st_size)\r\n",
+    "\r\n",
+    "#modified time / زمان آخرین تغییر\r\n",
+    "from datetime import datetime\r\n",
+    "mtime = os.stat('demo.txt').st_mtime\r\n",
+    "print(datetime.fromtimestamp(mtime))\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# traverse directoeies / دیدن تمام دایرکتوری و فایل های های درون تمام دایرکتوری\r\n",
+    "\r\n",
+    "from pathlib import Path\r\n",
+    "\r\n",
+    "for dirpath, dirname, filenames in os.walk(\"c:/Users/asus/Desktop/\"):\r\n",
+    "        print(\"Current Path : \", dirpath)\r\n",
+    "        print(\"Directories : \", dirname)\r\n",
+    "        print('Files : ', filenames)\r\n",
+    "\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# get var mian address / گرفتن آدرس دایرکتوری های متغیر اصلی\r\n",
+    "\r\n",
+    "# see all environments\r\n",
+    "env_var = os.environ\r\n",
+    "print(\"User's Environment variable:\")\r\n",
+    "pprint.pprint(dict(env_var), width = 1)\r\n",
+    "\r\n",
+    "\r\n",
+    "print(os.environ.get('windir'))\r\n",
+    "\r\n",
+    "print(os.environ.get('APPDATA'))\r\n",
+    "\r\n",
+    "print(os.environ.get('APPDATA'))\r\n",
+    "\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "source": [],
    "outputs": [],
    "metadata": {}
