--- a/os wiki/os wiki.ipynb
+++ b/os wiki/os wiki.ipynb
@@ -159,6 +159,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "source": [
+    "# path / ادرس\r\n",
+    "\r\n",
+    "#join two pass \r\n",
+    "print(os.path.join(\"\\Desktop\", \"test\"))\r\n",
+    "\r\n",
+    "#base name\r\n",
+    "os.path.basename(\"Desktop/tmp.txt\")\r\n",
+    "\r\n",
+    "#dir name\r\n",
+    "os.path.dirname(\"Desktop/tmp.txt\")\r\n",
+    "\r\n",
+    "#dir and base name\r\n",
+    "direc, base = os.path.split(\"Desktop/tmp.txt\")\r\n",
+    "print(direc,base)\r\n",
+    "\r\n",
+    "#exists (True False)\r\n",
+    "print(os.path.exists(\"/Desktop/test1\"))\r\n",
+    "\r\n",
+    "# check path is directory or not (True False)\r\n",
+    "print(os.path.isdir(\"/Desktop/tmp.txt\"))\r\n",
+    "\r\n",
+    "# check path is file or not (True False)\r\n",
+    "print(os.path.isfile(\"/Desktop\"))\r\n",
+    "\r\n",
+    "# split format and name\r\n",
+    "os.path.splitext(\"/Desktop/tmp.txt\")\r\n",
+    "\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "source": [],
    "outputs": [],
    "metadata": {}
