--- a/os wiki/os wiki.ipynb
+++ b/os wiki/os wiki.ipynb
@@ -15,6 +15,17 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "# current directory address/ آدرس دایرکتوری کنونی \r\n",
+    "\r\n",
+    "print(os.getcwd())\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "# change directory / تغییر دایرکتوری\r\n",
     "\r\n",
     "print(os.getcwd())\r\n",
@@ -93,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "# status of file / مشخصات فایل\r\n",
     "\r\n",
@@ -114,17 +125,7 @@
     "mtime = os.stat('demo.txt').st_mtime\r\n",
     "print(datetime.fromtimestamp(mtime))\r\n"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "os.stat_result(st_mode=33206, st_ino=1970324837525973, st_dev=3123163335, st_nlink=1, st_uid=0, st_gid=0, st_size=0, st_atime=1628683559, st_mtime=1628683559, st_ctime=1628683559)\n",
-      "0\n",
-      "2021-08-11 16:35:59.045763\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -146,11 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "# get var mian address / گرفتن آدرس دایرکتوری های متغیر اصلی\r\n",
-    "\r\n",
-    "import pprint\r\n",
     "\r\n",
     "# see all environments\r\n",
     "env_var = os.environ\r\n",
@@ -162,34 +161,15 @@
     "\r\n",
     "print(os.environ.get('APPDATA'))\r\n",
     "\r\n",
-    "print(os.environ.get('temp'))\r\n",
+    "print(os.environ.get('APPDATA'))\r\n",
     "\r\n"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "User's Environment variable:\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'pprint' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-d263d8bba776>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0menv_var\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menviron\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"User's Environment variable:\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mpprint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0menv_var\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwidth\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pprint' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "source": [
     "# path / ادرس\r\n",
     "\r\n",
@@ -219,7 +199,29 @@
     "os.path.splitext(\"/Desktop/tmp.txt\")\r\n",
     "\r\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\\Desktop\\test\n",
+      "Desktop tmp.txt\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "('/Desktop/tmp', '.txt')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 56
+    }
+   ],
    "metadata": {}
   },
   {
