--- a/Pandas wiki/Pandas.ipynb
+++ b/Pandas wiki/Pandas.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import library / وارد کردن کتابخانه\r\n",
-    "\r\n",
-    "import pandas as pd\r\n",
-    "\r\n"
+    "# import library / وارد کردن کتابخانه\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n"
    ]
   },
   {
@@ -32,19 +32,19 @@
     }
    ],
    "source": [
-    "# ایجاد سری دیتا\r\n",
-    "# create data series\r\n",
-    "\r\n",
-    "data = pd.Series(['first', 'secend','third','forth'])\r\n",
-    "\r\n",
-    "# values / مقادیر\r\n",
-    "print(data.values)\r\n",
-    "\r\n",
-    "# index range / رنج ایندکس ها\r\n",
-    "print(data.index)\r\n",
-    "\r\n",
-    "# show all values with index / نمایش همه ی مقادیر با جایگاه یا همان ایندکس\r\n",
-    "print(data[data.index])  # data[data.index] = data[:] = print(data)\r\n"
+    "# ایجاد سری دیتا\n",
+    "# create data series\n",
+    "\n",
+    "data = pd.Series(['first', 'secend','third','forth'])\n",
+    "\n",
+    "# values / مقادیر\n",
+    "print(data.values)\n",
+    "\n",
+    "# index range / رنج ایندکس ها\n",
+    "print(data.index)\n",
+    "\n",
+    "# show all values with index / نمایش همه ی مقادیر با جایگاه یا همان ایندکس\n",
+    "print(data[data.index])  # data[data.index] = data[:] = print(data)\n"
    ]
   },
   {
@@ -72,16 +72,16 @@
     }
    ],
    "source": [
-    "# تعریف اینکس\r\n",
-    "# define index\r\n",
-    "\r\n",
-    "\r\n",
-    "x = pd.Series(data=[1,2,3,4] ,\r\n",
-    "        index=[\"a\",\"b\",\"c\",\"d\"])\r\n",
-    "\r\n",
-    "print(x['a'])\r\n",
-    "## print(x[1])  # --> error\r\n",
-    "\r\n"
+    "# تعریف اینکس\n",
+    "# define index\n",
+    "\n",
+    "\n",
+    "x = pd.Series(data=[1,2,3,4] ,\n",
+    "        index=[\"a\",\"b\",\"c\",\"d\"])\n",
+    "\n",
+    "print(x['a'])\n",
+    "## print(x[1])  # --> error\n",
+    "\n"
    ]
   },
   {
@@ -104,56 +104,56 @@
     }
    ],
    "source": [
-    "# ایجاد سری دیتا از دیکشنری\r\n",
-    "# Create data series from dictionary\r\n",
-    "\r\n",
-    "\r\n",
-    "age = {\r\n",
-    "        \"Mahdi\" : 16,\r\n",
-    "        \"Mohammad\" : 20,\r\n",
-    "        \"Tayebeh\": 24,\r\n",
-    "        \"Sara\": 30,\r\n",
-    "        \"Ali\": 40,\r\n",
-    "}\r\n",
-    "\r\n",
-    "familyAge = pd.Series(age)\r\n",
-    "\r\n",
-    "print(familyAge)\r\n",
-    "\r\n",
-    "# return value of one index / مقدار یک اینکس\r\n",
-    "print(familyAge['Mahdi'])\r\n",
-    "\r\n",
-    "## names are index  and  ages are values  /  اسم ها جایگاه یا ایندکس هستند و سن ها مقدار\r\n"
+    "# ایجاد سری دیتا از دیکشنری\n",
+    "# Create data series from dictionary\n",
+    "\n",
+    "\n",
+    "age = {\n",
+    "        \"Mahdi\" : 16,\n",
+    "        \"Mohammad\" : 20,\n",
+    "        \"Tayebeh\": 24,\n",
+    "        \"Sara\": 30,\n",
+    "        \"Ali\": 40,\n",
+    "}\n",
+    "\n",
+    "familyAge = pd.Series(age)\n",
+    "\n",
+    "print(familyAge)\n",
+    "\n",
+    "# return value of one index / مقدار یک اینکس\n",
+    "print(familyAge['Mahdi'])\n",
+    "\n",
+    "## names are index  and  ages are values  /  اسم ها جایگاه یا ایندکس هستند و سن ها مقدار\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***نکته***\r\n",
-    "<br>\r\n",
-    "اگر یک داده رو در چند ایندکس معرفی کنیم، در تمام آن ایندکس ها داده ما جا میگیرد\r\n",
-    "\r\n",
-    "<br>\r\n",
-    "\r\n",
-    "***Point***\r\n",
-    "<br>\r\n",
-    "If we set a data in several indexes, our data will fit in all those indexes\r\n",
-    "\r\n",
-    "\r\n",
-    "***Example / مثال***\r\n",
-    "<br>\r\n",
-    "data = pd.Series(data=5, index=[1, 3, 10])\r\n",
-    "<br>\r\n",
-    "→ \r\n",
-    "<br>\r\n",
-    "1      5\r\n",
-    "<br>\r\n",
-    "3      5\r\n",
-    "<br>\r\n",
-    "10     5\r\n",
-    "\r\n",
-    "\r\n"
+    "***نکته***\n",
+    "<br>\n",
+    "اگر یک داده رو در چند ایندکس معرفی کنیم، در تمام آن ایندکس ها داده ما جا میگیرد\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "***Point***\n",
+    "<br>\n",
+    "If we set a data in several indexes, our data will fit in all those indexes\n",
+    "\n",
+    "\n",
+    "***Example / مثال***\n",
+    "<br>\n",
+    "data = pd.Series(data=5, index=[1, 3, 10])\n",
+    "<br>\n",
+    "→ \n",
+    "<br>\n",
+    "1      5\n",
+    "<br>\n",
+    "3      5\n",
+    "<br>\n",
+    "10     5\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -177,19 +177,19 @@
     }
    ],
    "source": [
-    "# تغییر جایگاه یا ایندکس\r\n",
-    "# change index\r\n",
-    "\r\n",
-    "x = pd.Series({2:'a', 3:'b', 4:'c'})\r\n",
-    "\r\n",
-    "print(x)\r\n",
-    "\r\n",
-    "# change index to reverse / تغییر اندکس ها به صورت برعکس\r\n",
-    "x = pd.Series(data=x, index=[4,3,2])\r\n",
-    "\r\n",
-    "print(x)\r\n",
-    "\r\n",
-    "\r\n"
+    "# تغییر جایگاه یا ایندکس\n",
+    "# change index\n",
+    "\n",
+    "x = pd.Series({2:'a', 3:'b', 4:'c'})\n",
+    "\n",
+    "print(x)\n",
+    "\n",
+    "# change index to reverse / تغییر اندکس ها به صورت برعکس\n",
+    "x = pd.Series(data=x, index=[4,3,2])\n",
+    "\n",
+    "print(x)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -208,12 +208,12 @@
     }
    ],
    "source": [
-    "# ایجاد دیتا فریم\r\n",
-    "# create data frame\r\n",
-    "\r\n",
-    "data = pd.DataFrame([ {'a' : 1, 'b' : 2} , {'a' : 1 , 'c' : 3, 'd' : 4} ])\r\n",
-    "print(data)\r\n",
-    "\r\n"
+    "# ایجاد دیتا فریم\n",
+    "# create data frame\n",
+    "\n",
+    "data = pd.DataFrame([ {'a' : 1, 'b' : 2} , {'a' : 1 , 'c' : 3, 'd' : 4} ])\n",
+    "print(data)\n",
+    "\n"
    ]
   },
   {
@@ -237,21 +237,21 @@
     }
    ],
    "source": [
-    "# ایجاد دیتا فریم به صورت دستی\r\n",
-    "# Create Data Frame manually \r\n",
-    "\r\n",
-    "import numpy as np\r\n",
-    "\r\n",
-    "data = pd.DataFrame(np.random.rand(3,2),columns=[\"first\",\"secend\"]\r\n",
-    "        ,index=[\"a\",\"b\",\"c\"])\r\n",
-    "\r\n",
-    "print(data)\r\n",
-    "\r\n",
-    "\r\n",
-    "data = pd.DataFrame(np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]]),\r\n",
-    "        columns=['a', 'b', 'c'])\r\n",
-    "\r\n",
-    "print(data)\r\n"
+    "# ایجاد دیتا فریم به صورت دستی\n",
+    "# Create Data Frame manually \n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "data = pd.DataFrame(np.random.rand(3,2),columns=[\"first\",\"secend\"]\n",
+    "        ,index=[\"a\",\"b\",\"c\"])\n",
+    "\n",
+    "print(data)\n",
+    "\n",
+    "\n",
+    "data = pd.DataFrame(np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]]),\n",
+    "        columns=['a', 'b', 'c'])\n",
+    "\n",
+    "print(data)\n"
    ]
   },
   {
@@ -277,21 +277,21 @@
     }
    ],
    "source": [
-    "# جابجایی ردیف و ستون\r\n",
-    "# Replace rows and columns\r\n",
-    "\r\n",
-    "data = pd.DataFrame( {'first' : [1,2,3], 'secend':[4,5,6]},columns=[\"first\",\"secend\"]\r\n",
-    "        ,index=[\"a\",\"b\",\"c\"])#.T\r\n",
-    "\r\n",
-    "# simple\r\n",
-    "print(data)\r\n",
-    "\r\n",
-    "# replaced / جابجا شده\r\n",
-    "print(data.T)\r\n",
-    "print(pd.DataFrame(data).T)\r\n",
-    "\r\n",
-    "## بذاریم data در آخر تعریف دیتا فریم در متغیر .T میتوانیم یک\r\n",
-    "## we can type \".T\" in end of the define data frame in \"data\" variable\r\n"
+    "# جابجایی ردیف و ستون\n",
+    "# Replace rows and columns\n",
+    "\n",
+    "data = pd.DataFrame( {'first' : [1,2,3], 'secend':[4,5,6]},columns=[\"first\",\"secend\"]\n",
+    "        ,index=[\"a\",\"b\",\"c\"])#.T\n",
+    "\n",
+    "# simple\n",
+    "print(data)\n",
+    "\n",
+    "# replaced / جابجا شده\n",
+    "print(data.T)\n",
+    "print(pd.DataFrame(data).T)\n",
+    "\n",
+    "## بذاریم data در آخر تعریف دیتا فریم در متغیر .T میتوانیم یک\n",
+    "## we can type \".T\" in end of the define data frame in \"data\" variable\n"
    ]
   },
   {
@@ -322,27 +322,27 @@
     }
    ],
    "source": [
-    "# انواع داده در دیتا فریم\r\n",
-    "# Data types in Data Frame\r\n",
-    "\r\n",
-    "\r\n",
-    "d = {'col1': [1.2, 2], 'col2': [3, 4]}\r\n",
-    "\r\n",
-    "df = pd.DataFrame(data=d)\r\n",
-    "\r\n",
-    "print(df)\r\n",
-    "print(f' dtypes :\\n{df.dtypes}')\r\n",
-    "\r\n",
-    "print('____')\r\n",
-    "\r\n",
-    "df = pd.DataFrame(data=d, dtype=np.int8)\r\n",
-    "print(f' dtypes :\\n{df.dtypes}')\r\n",
-    "print(df)\r\n",
-    "\r\n",
-    "\r\n",
-    "# The Data Types is explained in the Numpy wiki file\r\n",
-    "# توضیح داده شده Numpy wiki دیتا تایپ ها در فایل\r\n",
-    "# https://github.com/mahdi-ebrahimi-per/python-mini-projects/tree/main/Numpy%20wiki\r\n"
+    "# انواع داده در دیتا فریم\n",
+    "# Data types in Data Frame\n",
+    "\n",
+    "\n",
+    "d = {'col1': [1.2, 2], 'col2': [3, 4]}\n",
+    "\n",
+    "df = pd.DataFrame(data=d)\n",
+    "\n",
+    "print(df)\n",
+    "print(f' dtypes :\\n{df.dtypes}')\n",
+    "\n",
+    "print('____')\n",
+    "\n",
+    "df = pd.DataFrame(data=d, dtype=np.int8)\n",
+    "print(f' dtypes :\\n{df.dtypes}')\n",
+    "print(df)\n",
+    "\n",
+    "\n",
+    "# The Data Types is explained in the Numpy wiki file\n",
+    "# توضیح داده شده Numpy wiki دیتا تایپ ها در فایل\n",
+    "# https://github.com/mahdi-ebrahimi-per/python-mini-projects/tree/main/Numpy%20wiki\n"
    ]
   },
   {
@@ -371,31 +371,120 @@
     }
    ],
    "source": [
-    "# انتخاب بندی یا برش دادن\r\n",
-    "# slicing\r\n",
-    "\r\n",
-    "\r\n",
-    "data = pd.DataFrame( {'first' : [1,2,3], 'secend':[4,5,6]},columns=[\"first\",\"secend\"]\r\n",
-    "        ,index=[\"a\",\"b\",\"c\"])#.T\r\n",
-    "\r\n",
-    "print(data)\r\n",
-    "\r\n",
-    "\r\n",
-    "# Show up to row 2 (the columns do not make a difference)\r\n",
-    "# تا سطر دوم رو نشون بده (ستون ها تفاوتی نمیکنند)\r\n",
-    "print(data[:2])\r\n",
-    "## print(data[:2, :1])   # --> error  (can't use [:x,:y], must use [:x]  and x is row, just slice just row)\r\n",
-    "\r\n",
-    "\r\n",
-    "# slice row and column / انخاب هم سطر هم ستون\r\n",
-    "# slice 2 row and first column / انتخاب 2 سطر و یک ستون\r\n",
-    "print(data.iloc[:2, :1])\r\n",
-    "\r\n",
-    "\r\n",
-    "# slice with value / انتخاب با کمک مقادیر\r\n",
-    "print(data.loc[:'b', :'first'])\r\n",
-    "\r\n",
-    "\r\n"
+    "# انتخاب بندی یا برش دادن\n",
+    "# slicing\n",
+    "\n",
+    "\n",
+    "data = pd.DataFrame( {'first' : [1,2,3], 'secend':[4,5,6]},columns=[\"first\",\"secend\"]\n",
+    "        ,index=[\"a\",\"b\",\"c\"])#.T\n",
+    "\n",
+    "print(data)\n",
+    "\n",
+    "\n",
+    "# Show up to row 2 (the columns do not make a difference)\n",
+    "# تا سطر دوم رو نشون بده (ستون ها تفاوتی نمیکنند)\n",
+    "print(data[:2])\n",
+    "## print(data[:2, :1])   # --> error  (can't use [:x,:y], must use [:x]  and x is row, just slice just row)\n",
+    "\n",
+    "\n",
+    "# slice row and column / انخاب هم سطر هم ستون\n",
+    "# slice 2 row and first column / انتخاب 2 سطر و یک ستون\n",
+    "print(data.iloc[:2, :1])\n",
+    "\n",
+    "\n",
+    "# slice with value / انتخاب با کمک مقادیر\n",
+    "print(data.loc[:'b', :'first'])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultiIndex([(1,  'red'),\n",
+       "            (1, 'blue'),\n",
+       "            (2,  'red'),\n",
+       "            (2, 'blue')],\n",
+       "           names=['number', 'color'])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "arrays = [[1, 1, 2, 2], ['red', 'blue', 'red', 'blue']]\n",
+    "pd.MultiIndex.from_arrays(arrays, names=('number', 'color'))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Animal  Max Speed\n",
+      "0  Falcon      380.0\n",
+      "1  Falcon      370.0\n",
+      "2  Parrot       24.0\n",
+      "3  Parrot       26.0\n",
+      "        Max Speed\n",
+      "Animal           \n",
+      "Falcon      375.0\n",
+      "Parrot       25.0\n",
+      "_____________\n",
+      "                Max Speed\n",
+      "Animal Type              \n",
+      "Falcon Captive      390.0\n",
+      "       Wild         350.0\n",
+      "Parrot Captive       30.0\n",
+      "       Wild          20.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#گروه بندی دیتافریم با یک مپ یا سری ستون ها\n",
+    "#Group DataFrame using a mapper or by a Series of columns.\n",
+    "\n",
+    "#https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.groupby.html\n",
+    "\n",
+    "df = pd.DataFrame({'Animal': ['Falcon', 'Falcon',\n",
+    "                              'Parrot', 'Parrot'],\n",
+    "                   'Max Speed': [380., 370., 24., 26.]})\n",
+    "\n",
+    "\n",
+    "print(df)\n",
+    "\n",
+    "df = df.groupby(['Animal']).mean()\n",
+    "\n",
+    "print(df)\n",
+    "\n",
+    "print('_____________')\n",
+    "\n",
+    "\n",
+    "arrays = [['Falcon', 'Falcon', 'Parrot', 'Parrot'],\n",
+    "          ['Captive', 'Wild', 'Captive', 'Wild']]\n",
+    "\n",
+    "index = pd.MultiIndex.from_arrays(arrays, names=('Animal', 'Type'))\n",
+    "\n",
+    "df = pd.DataFrame({'Max Speed': [390., 350., 30., 20.]},\n",
+    "                  index=index)\n",
+    "\n",
+    "print(df)\n",
+    "\n"
    ]
   },
   {
