--- a/Pandas wiki/Pandas.ipynb
+++ b/Pandas wiki/Pandas.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -23,6 +23,11 @@
      "text": [
       "['first' 'secend' 'third' 'forth']\n",
       "RangeIndex(start=0, stop=4, step=1)\n",
+      "0     first\n",
+      "1    secend\n",
+      "2     third\n",
+      "3     forth\n",
+      "dtype: object\n",
       "0     first\n",
       "1    secend\n",
       "2     third\n",
@@ -49,25 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'Series' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-dc788064231a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'Series' object cannot be interpreted as an integer"
+      "a : 1\n",
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "d    4\n",
+      "dtype: int64\n"
      ]
     }
    ],
@@ -79,8 +78,10 @@
     "x = pd.Series(data=[1,2,3,4] ,\n",
     "        index=[\"a\",\"b\",\"c\",\"d\"])\n",
     "\n",
-    "print(x['a'])\n",
+    "\n",
+    "print(f\"a : {x['a']}\")\n",
     "## print(x[1])  # --> error\n",
+    "print(x)\n",
     "\n"
    ]
   },
@@ -496,11 +497,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "7e7df21fdf00a26e36d4e6310a308abb9513233b4a3ec64213ee6595ee7ec7bb"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit",
+   "display_name": "Python 3.9.2 64-bit",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -513,9 +512,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "b667cebad148e7b094a58ee81f940c685de1dd70a003a9ccdca4a5792431bee5"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
